--- a/nextflow/annotation.config
+++ b/nextflow/annotation.config
@@ -1,10 +1,10 @@
 // name this cohort/dataset
-params.cohort = "cohort"
+params.cohort = "singleton"
 
 // all outputs which are not specific to a cohort/family/analysis
 params.processed_annotations = "nextflow/processed_annotations"
 
-params.input_dir = "nextflow/inputs"
+params.input_dir = "nextflow/singleton_inputs"
 params.input_vcf_dir = "${params.input_dir}/individual_vcfs"
 
 // to skip the merge-from-individual-vcfs step, and run on specifically provided data, use this argument
@@ -41,5 +41,5 @@ params.cohort_output_dir = "nextflow/${params.cohort}_outputs"
 
 // Docker image - built from Dockerfile in the root directory
 // "docker build -t talos:7.2.0 ."
-params.container = 'talos:7.2.0'
-docker.enabled = true
+params.container = 'library://james_lawlor/talos-build/talos-build:7.1.5'
+singularity.enabled = true
