--- a/nextflow/talos.config
+++ b/nextflow/talos.config
@@ -1,8 +1,8 @@
 // name this cohort/dataset
-params.cohort = "cohort"
+params.cohort = "singleton2"
 
 // Input data paths
-params.input_dir = "nextflow/inputs"
+params.input_dir = "nextflow/singleton_inputs2"
 
 // outputs directory
 params.output_dir = "nextflow/${params.cohort}_outputs"
@@ -27,7 +27,7 @@ params.phenopackets = "${params.output_dir}/${params.cohort}_phenopackets.json"
 // data becomes available
 params.hpo_pedigree = "${params.input_dir}/pedigree_with_hpo.ped"
 
-params.runtime_config = "${params.input_dir}/config.toml"
+params.runtime_config = "filtering_config.toml" //move this out of the input directory
 
 // all outputs which are not specific to a cohort/family/analysis
 params.processed_annotations = "nextflow/processed_annotations"
@@ -53,5 +53,6 @@ params.phenio_db = "${params.large_files}/phenio.db.gz"
 // container built using "docker build -t talos:7.2.0 ."
 // this builds a relatively small image with no GCP install
 // this may of may not be the default depending on the docker installation
-params.container = 'talos:7.2.0'
-docker.enabled = true
+//params.container = 'talos:7.2.0'
+params.container = 'library://james_lawlor/talos-build/talos-build:7.1.5'
+singularity.enabled = true
