--- a/nextflow/talos.config
+++ b/nextflow/talos.config
@@ -1,8 +1,8 @@
 // name this cohort/dataset
-params.cohort = "singleton2"
+// specify on command line params.cohort = "singleton2"
 
 // Input data paths
-params.input_dir = "nextflow/singleton_inputs2"
+// specify on comand line params.input_dir = "nextflow/singleton_inputs2"
 
 // outputs directory
 params.output_dir = "nextflow/${params.cohort}_outputs"
@@ -27,7 +27,7 @@ params.phenopackets = "${params.output_dir}/${params.cohort}_phenopackets.json"
 // data becomes available
 params.hpo_pedigree = "${params.input_dir}/pedigree_with_hpo.ped"
 
-params.runtime_config = "filtering_config.toml" //move this out of the input directory
+params.runtime_config = "nextflow/filtering_config.toml" //move this out of the input directory
 
 // all outputs which are not specific to a cohort/family/analysis
 params.processed_annotations = "nextflow/processed_annotations"
