--- a/nextflow/annotation.config
+++ b/nextflow/annotation.config
@@ -1,12 +1,12 @@
 // name this cohort/dataset
-params.cohort = "singleton"
+// define in command line params.cohort = "singleton" 
 
 // all outputs which are not specific to a cohort/family/analysis
 params.processed_annotations = "nextflow/processed_annotations"
 
-params.input_dir = "nextflow/singleton_inputs"
-params.input_vcf_dir = "${params.input_dir}/individual_vcfs"
-
+// define this in command line params.input_dir = "nextflow/singleton_inputs"
+//params.input_vcf_dir = "${params.input_dir}/individual_vcfs"
+params.input_vcf_dir = '/cluster/home/jlawlor/talos/HA_VCFS'
 // to skip the merge-from-individual-vcfs step, and run on specifically provided data, use this argument
 // I expect this file to be located with a corresponding tabix index (`XXX.tbi`)
 // I am also assuming that when providing data this way, callset frequency INFO fields (AC/AF/AN) are populated already
