HA deployment tweaks

--- a/nextflow/annotation.config
+++ b/nextflow/annotation.config
@@ -6,7 +6,7 @@ params.processed_annotations = "nextflow/processed_annotations"
 
 // define this in command line params.input_dir = "nextflow/singleton_inputs"
 //params.input_vcf_dir = "${params.input_dir}/individual_vcfs"
-params.input_vcf_dir = '/cluster/home/jlawlor/talos/HA_VCFS'
+//params.input_vcf_dir = '/cluster/home/jlawlor/talos/HA_VCFS'
 // to skip the merge-from-individual-vcfs step, and run on specifically provided data, use this argument
 // I expect this file to be located with a corresponding tabix index (`XXX.tbi`)
 // I am also assuming that when providing data this way, callset frequency INFO fields (AC/AF/AN) are populated already
@@ -37,7 +37,7 @@ params.alphamissense_tsv = "${params.large_files}/AlphaMissense_hg38.tsv.gz"
 params.alphamissense_tar = "${params.processed_annotations}/alphamissense_38.ht.tar"
 
 // outputs path(s)
-params.cohort_output_dir = "nextflow/${params.cohort}_outputs"
+params.cohort_output_dir = "nextflow/runs/${params.cohort}_outputs"
 
 // Docker image - built from Dockerfile in the root directory
 // "docker build -t talos:7.2.0 ."
