--- a/nextflow/talos.config
+++ b/nextflow/talos.config
@@ -5,7 +5,7 @@
 // specify on comand line params.input_dir = "nextflow/singleton_inputs2"
 
 // outputs directory
-params.output_dir = "nextflow/${params.cohort}_outputs"
+params.output_dir = "nextflow/runs/${params.cohort}_outputs"
 
 params.sequencing_type = "genome"
 params.sequencing_tech = "short-read"
